# CineSense-Movie-Recommendation-Streamlit-Web-App

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PROPOSED_README.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  ruff.toml  run.py
.github/: badges.yml
.github/workflows/: ci.yml
docs/: about.html  contact.html  index.html  license.html  privacy.html  styles.css
src/data/: __init__.py  preprocessing.py
src/recommend/: __init__.py  recommend.py
tests/: test_data.py  test_recommend.py
